  spatial filter.

- False Easting/Northing should be in the linear units of measure in MapInfo,
  but in OGRSpatialReference/WKT they are always in meters.  Convert 
  accordingly in mitab_coordsys.cpp and mitab_spatialref.cpp.  NFW

- Added support for reading and writing new V650 Multipoint (not fully
  implemented for MIF yet)


Version 1.1.3 - (2001-11-02)
----------------------------

- mitab_tabview.cpp: Use VSIUnlink() instead of unlink(). NFW.

- mitab_utils.cpp: Don't use multi-byte support if _WIN32 and unix are
  defined to try and preserve cygwin support. NFW

- C API: Added mitab_c_get_text().
         Added mitab_c_get_mif_coordsys()
         Added mitab_c_get_projinfo() and mitab_c_set_projinfo()
         Changed mitab_c_create() to make bounds optional and allow using
         default projection bounds if available

- GetLabelStyleString(): take line spacing and num. of lines into account
  when calculating text height.

- Test for NULL geometries if spatial filter enabled in GetNextFeature()
  (objects with NONE geometry would have caused a crash when a spatial 
   filter was set).

- Fixed a few memory leaks in mitab_miffile.cpp.  NFW.

- Fixed mitab_capi.c to not delete the spatial ref unless dereferencing it
  drops the count to 0.  NFW.

- Modified TABFile::SetSpatialRef() to clone the passed in OGRSpatialReference
  instead of taking a reference to it, so it will work with stack allocated
  OGRSpatialReferences or in cases where the caller doesn't check ref counts.
  NFW.

- TABPolyline::ValidateMapInfoType(): return TAB_GEOM_NONE if numpoints < 2

- Substantial additions to lots of files adding support for efficient
  spatial queries by utilizing the spatial indexes when reading.  NFW.

- TABText should not produce an error if reading a 0-length text.

- Seamless files: when reading on Unix, replace '\\' with '/' in file path
  read from the index table.

- Modified mitab_miffile.cpp to keep track of the feature id of the 