@@ -54,6 +54,9 @@ CHANGES - Current Version:
 - Added support for reading and writing new V650 Multipoint (not fully
   implemented for MIF yet)
 
+- Added support for Cassini Soldner projection (projection 30). NFW
+
+
 
 Version 1.1.3 - (2001-11-02)
 ----------------------------
@@ -394,5 +397,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.79 2002-03-26 03:53:54 daniel Exp $
+$Id: HISTORY.TXT,v 1.80 2002-04-01 19:49:24 warmerda Exp $
 ------------
